# bcc

build-syms/: CMakeLists.txt
src/cc/: bcc_elf.c  bcc_syms.cc  bcc_syms.h  syms.h
